# wb_image_relevance_challenge

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/: config.py  dataset.py  infer.py  make_folds.py  optimization.py  train.py  utils.py
tests/: test_optimization.py
