[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-relevance-challenge"
version = "0.1.0"
description = "Fusion (image+text) training/inference pipeline on PyTorch + timm + HF Transformers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Alexander Nikolaev @nikolaev.a147"}]
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "timm>=0.9.8",
    "transformers>=4.41",
    "torchmetrics>=1.2",
    "albumentations>=1.3.1",
    "opencv-python>=4.8",
    "pandas>=2.1",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "pyarrow>=14.0.0",
    "pillow>=10.0.0"
]

[tool.setuptools]
packages = ["src"]

[project.scripts]
fusion-train = "src.train:main"
fusion-infer = "src.infer:main"
make-folds = "src.make_folds:main"
